syntax = "proto2";

package frankenpaxos.craq;

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "frankenpaxos.craq"
  flat_package: true
};

// Helper messages. ////////////////////////////////////////////////////////////
message CommandId {
  // A client's address, pseudonym, and id uniquely identify a command.
  required bytes client_address = 1;
  required int32 client_pseudonym = 2;
  required int32 client_id = 3;
}

message Write {
  required CommandId command_id = 1;
  required string key = 2;
  required string value = 3;
}

message WriteBatch {
  repeated Write write = 1;
}

message Read {
  required CommandId command_id = 1;
  required string key = 2;
}

message ReadBatch {
  repeated Read read = 1;
}

message Ack {
  required WriteBatch write_batch = 1;
}

message TailRead {
  required ReadBatch read_batch = 1;
}

// Protocol messages. //////////////////////////////////////////////////////////
message ClientReply {
  required CommandId command_id = 1;
}

message ReadReply {
  required CommandId command_id = 1;
  required string value = 2;
}

// Inbound messages. ///////////////////////////////////////////////////////////
message ClientInbound {
  oneof request {
    ClientReply client_reply = 1;
    ReadReply read_reply = 2;
  }
}

message ChainNodeInbound {
  oneof request {
    Write write = 1;
    Read read = 2;
    WriteBatch write_batch = 3;
    ReadBatch read_batch = 4;
    Ack ack = 5;
    TailRead tail_read = 6;
  }
}

